<resources>
    <string name="app_name">RideSmart</string>
    <string name="title_activity_maps">Map</string>
    <string name="chronometer_default">00:00:00</string>
    <string name="speed_default">0.0 km/h</string>
    <string name="go_button_default">START</string>
    <string name="resume_button_default">PLAY</string>
    <string name="stop_button_default">STOP</string>
    <string name="distance_default">0.00 km</string>
    <string name="go_button_pause">PAUSE</string>
    <string name="action_open">Open routes</string>
    <string name="notification_text">Location running</string>
    <string name="notification_title">RideSmart</string>
    <string name="ticker_text">ticker default</string>
    <string name="rationale_title">We need permission to monitor your routes</string>
    <string name="rationale_message">This app relies on location services to provide route recording and route monitoring. All the location data is stored locally on your phone, and we do not collect such information for any purposes whatsoever.</string>
    <string name="permission_not_granted">Can\'t start! Location permissions not granted!</string>
    <string name="go_button_new">START NEW ROUTE</string>
    <string name="routes_toolbar_title">Routes List</string>
    <string name="snackbar_undo_text">Route deleted</string>
    <string name="snackbar_undo_action">Undo</string>
    <string name="display_toolbar_title">Route Statistics</string>
    <string name="total_distance_label">Total Distance</string>
    <string name="avg_speed_label">AVG Speed</string>
    <string name="max_speed_label">Max Speed</string>
    <string name="num_turns_label">Turns</string>
    <string name="time_label">Total Time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="route_name_dialog_message">Name</string>
    <string name="route_name_dialog_title">Choose a route name</string>
    <string name="ride_time_label">Total Route Time</string>
    <string name="speed_label">Speed</string>
    <string name="add_new_route">Add new route</string>
    <string name="start_new_route">Start new route?</string>
</resources>