<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RideActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ride_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <fragment
        android:id="@+id/main_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/ride_toolbar"
        app:layout_constraintBottom_toTopOf="@id/ride_time_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:uiCompass="true"
        tools:context=".activities.RideActivity" />

    <LinearLayout
        android:id="@+id/ride_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/main_map"
        app:layout_constraintBottom_toTopOf="@id/ride_speed_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Chronometer
            android:id="@+id/time_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#FFFFFF"
            android:enabled="true"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="true"
            android:text="@string/chronometer_default"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/ride_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:labelFor="@id/time_view"
            android:text="@string/ride_time_label"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ride_speed_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingTop="2dp"
        android:paddingBottom="2dp"

        app:layout_constraintEnd_toStartOf="@+id/ride_distance_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ride_time_layout">

        <TextView
            android:id="@+id/speed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:includeFontPadding="true"
            android:text="@string/speed_default"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/ride_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:labelFor="@id/speed_view"
            android:text="@string/speed_label"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ride_distance_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/ride_speed_layout"
        app:layout_constraintTop_toBottomOf="@+id/ride_time_layout">

        <TextView
            android:id="@+id/distance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:text="@string/distance_default"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/ride_distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:labelFor="@id/distance_view"
            android:text="@string/total_distance_label"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/go_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#4CAF50"
        android:fontFamily="sans-serif-black"
        android:onClick="onGoClick"
        android:text="@string/go_button_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        app:layout_constraintTop_toBottomOf="@id/ride_speed_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/resume_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="#4CAF50"
        android:fontFamily="sans-serif-black"
        android:onClick="onResumeClick"
        android:text="@string/resume_button_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ride_speed_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:background="#F3001C"
        android:fontFamily="sans-serif-black"
        android:onClick="onStopClick"
        android:text="@string/stop_button_default"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/ride_speed_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resume_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>